Fix spacing on contact us

--- a/themes/sports-on-campus/sass/_contact-us.scss
+++ b/themes/sports-on-campus/sass/_contact-us.scss
@@ -12,7 +12,7 @@
         font-size: 14px;
     }
     .question{
-        max-width: 300px;
+        width: 300px;
     }
     .submit-button{
         text-align: center;
@@ -41,7 +41,7 @@
 }
 
 
-@media (min-width: $desktop-width) {
+@include desktop {
     .page-id-25{
         .entry-title{
             padding-bottom: 1rem;
@@ -86,5 +86,12 @@
         max-width: 500px;
         margin: 0 auto;
     }
+    .entry-content .question{
+        width:100%
+    }
+    .page-template-default .wpcf7-form{
+        width:100%;
+    }
+
 }
 }
